add first working version of ig

--- a/ig.ini
+++ b/ig.ini
@@ -2,7 +2,7 @@
 # ini file for the Implementation Guide publisher
 # see comments below for instructions
 
-ig = fsh-generated/resources/ImplementationGuide-hl7.fhir.fr.example.json
+ig = fsh-generated/resources/ImplementationGuide-hl7.fhir.fr.medication.json
 template = https://github.com/Interop-Sante/hl7.ig.fr.template
 #template = #local-template
 
