--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -1,7 +1,7 @@
-id: hl7.fhir.fr.example
-canonical: http://hl7.fr/fhir/fr/example
-name: ExampleIG
-title: Exemple d'IG Français
+id: hl7.fhir.fr.medication
+canonical: https://hl7.fr/fhir/fr/medication
+name: MED
+title: Guide d'implémentation du médicament
 publisher:
   name: Interop'Santé
   url: http://interopsante.org/
@@ -11,3 +11,17 @@ fhirVersion: 4.0.1
 copyrightYear: 2020+
 releaseLabel: ci-build
 
+pages:
+    index.md: 
+      title: Accueil
+    downloads.md:
+      title: Téléchargements et usages
+
+
+menu:
+  Accueil: index.html
+  Ressources de conformité: artifacts.html
+  Autres ressources:
+      Téléchargements et usages: downloads.html
+      "Spécifications FHIR ": new-tab {{site.data.fhir.path}}index.html
+      "Site HL7 ": new-tab https://hl7.fr
