Essai ConceptMap et editorial
Premières pages et ConceptMap pour visualisation du rendu

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -19,6 +19,10 @@ dependencies:
 pages:
     index.md: 
       title: Accueil
+    conciliation.md:
+      title: La conciliation
+    transformationPN13-FHIR.md:
+      title: Transformation de PN13 en FHIR
     downloads.md:
       title: Téléchargements et usages
 
