update sushi config

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -29,6 +29,8 @@ pages:
 
 menu:
   Accueil: index.html
+  Conciliation: conciliation.html
+  Transformation PN13: transformationPN13-FHIR.html
   Ressources de conformité: artifacts.html
   Autres ressources:
       Téléchargements et usages: downloads.html
