--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -19,12 +19,18 @@ dependencies:
 pages:
     index.md: 
       title: Accueil
+    conciliation.md:
+      title: La conciliation
+    transformationPN13-FHIR.md:
+      title: Transformation de PN13 en FHIR
     downloads.md:
       title: Téléchargements et usages
 
 
 menu:
   Accueil: index.html
+  Conciliation: conciliation.html
+  Transformation PN13: transformationPN13-FHIR.html
   Ressources de conformité: artifacts.html
   Autres ressources:
       Téléchargements et usages: downloads.html
