correction lien image

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -25,6 +25,8 @@ pages:
       title: Transformation de PN13 en FHIR
     downloads.md:
       title: Téléchargements et usages
+    suivitravaux.md:
+      title: Historique des travaux
 
 
 menu:
@@ -33,6 +35,7 @@ menu:
   Transformation PN13: transformationPN13-FHIR.html
   Ressources de conformité: artifacts.html
   Autres ressources:
+      Historique des travaux: suivitravaux.html
       Téléchargements et usages: downloads.html
       "Spécifications FHIR ": new-tab {{site.data.fhir.path}}index.html
       "Site HL7 ": new-tab https://hl7.fr
