--- a/.github/workflows/fhir-workflows.yml
+++ b/.github/workflows/fhir-workflows.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
         with:      
           path: igSource
-      - uses: ansforge/IG-workflows@vmain
+      - uses: ansforge/IG-workflows@main
         with:      
           repo_ig: "./igSource"   
           github_page: "true"
