--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -31,7 +31,27 @@ pages:
 
 menu:
   Accueil: index.html
-  Conciliation: conciliation.html
+  Conciliation: 
+      Introdution: conciliation-Intro.html
+      Vue d'ensemble: conciliation-VueEnsemble.html
+      Cas d'uasage: conciliation-CasUsage.html
+      Ressources: conciliation-Ressources.html
+      Implémentation: conciliation-Implementation.html
+      Exemples: conciliation-Exemples.html
+  Prescription:
+      Introduction: prescription-Intro.html
+      Vue d'ensemble: prescription-VueEnsemble.html
+      Cas d'usage: prescription-CasUsage.html
+      Ressources: prescription-Ressources.html
+      Implémentation: prescription-Implementation.html
+      Exemples: prescription-Exemples.html
+      Etude complémentaire: prescription-EtudeComplementaire.html
+  Dispensation:
+      Introduction: dispensation-Intro.html
+      Ressource *MedicationDispense*: dispensation-RessourceMedicationDispense.html
+      La delivrance la plus simple: dispensation-DelivrancePlusSimple.html
+      La dispensation nominative à délivrance reglobalisée: dispensation-DispensationNominativeDelivranceReglobalisee.html
+      Discussion: dispensation-discussion.html
   Transformation PN13: transformationPN13-FHIR.html
   Ressources de conformité: artifacts.html
   Autres ressources:
