--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -21,7 +21,7 @@ pages:
       title: Accueil
     conciliation-Intro.md:
       title: La conciliation
-    prescription-Into.md:
+    prescription-Intro.md:
       title: La prescription
     dispensation-Intro.md:
       title: La dispensation
