--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -19,8 +19,42 @@ dependencies:
 pages:
     index.md: 
       title: Accueil
-    conciliation.md:
-      title: La conciliation
+    conciliation-Intro.md:
+      title: La conciliation - Introduction
+    conciliation-VueEnsemble.md:
+      title: La conciliation - Vue d'ensemble
+    conciliation-CasUsage.md:
+      title: La conciliation - Cas d'usage
+    conciliation-Ressources.md:
+      title: La conciliation - Ressources
+    conciliation-Implementation.md:
+      title: La conciliation - Implémentation
+    conciliation-Exemples.md:
+      title: La conciliation - Exemples
+    prescription-Intro.md:
+      title: La prescription - Introduction
+    prescription-VueEnsemble.md:
+      title: La prescription - Vue d'ensemble
+    prescription-CasUsage.md:
+      title: La prescription - Cas d'usage
+    prescription-Ressources.md:
+      title: La prescription - Ressources
+    prescription-Implementation.md:
+      title: La prescription - Implémentation
+    prescription-Exemples.md:
+      title: La prescription - Exemples
+    prescription-EtudeComplementaire.md:
+      title: La prescription - Etude complémentaire
+    dispensation-Intro.md:
+      title: La dispensation - Introduction
+    dispensation-RessourceMedicationDispense.md:
+      title: La dispensation - Ressource MedicationDispense
+    dispensation-DelivrancePlusSimple.md:
+      title: La dispensation - La délivrance la plus simple
+    dispensation-DispensationNominativeDelivranceReglobalisee.md:
+      title: La dispensation - La dispensation nominative à délivrance reglobalisée
+    dispensation-Discussion.md:
+      title: La disensation - Discussion
     transformationPN13-FHIR.md:
       title: Transformation de PN13 en FHIR
     downloads.md:
@@ -31,7 +65,27 @@ pages:
 
 menu:
   Accueil: index.html
-  Conciliation: conciliation.html
+  Conciliation: 
+      Introdution: conciliation-Intro.html
+      Vue d'ensemble: conciliation-VueEnsemble.html
+      Cas d'usage: conciliation-CasUsage.html
+      Ressources: conciliation-Ressources.html
+      Implémentation: conciliation-Implementation.html
+      Exemples: conciliation-Exemples.html
+  Prescription:
+      Introduction: prescription-Intro.html
+      Vue d'ensemble: prescription-VueEnsemble.html
+      Cas d'usage: prescription-CasUsage.html
+      Ressources: prescription-Ressources.html
+      Implémentation: prescription-Implementation.html
+      Exemples: prescription-Exemples.html
+      Etude complémentaire: prescription-EtudeComplementaire.html
+  Dispensation:
+      Introduction: dispensation-Intro.html
+      Ressource *MedicationDispense*: dispensation-RessourceMedicationDispense.html
+      La délivrance la plus simple: dispensation-DelivrancePlusSimple.html
+      La dispensation nominative à délivrance reglobalisée: dispensation-DispensationNominativeDelivranceReglobalisee.html
+      Discussion: dispensation-Discussion.html
   Transformation PN13: transformationPN13-FHIR.html
   Ressources de conformité: artifacts.html
   Autres ressources:
