correction sushi-config

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -55,8 +55,12 @@ pages:
       title: La dispensation - La dispensation nominative à délivrance reglobalisée
     dispensation-Discussion.md:
       title: La disensation - Discussion
-    transformationPN13-FHIR.md:
+    transformationPN13-FHIR-Intro.md:
       title: Transformation de PN13 en FHIR
+    transformation-PN13-vers-FHIR.md:
+      title: Transformation de PN13 vers FHIR
+    transformation-FHIR-vers-PN13.md:
+      title: Transformation de FHIR vers PN13
     downloads.md:
       title: Téléchargements et usages
     suivitravaux.md:
@@ -86,7 +90,11 @@ menu:
       La délivrance la plus simple: dispensation-DelivrancePlusSimple.html
       La dispensation nominative à délivrance reglobalisée: dispensation-DispensationNominativeDelivranceReglobalisee.html
       Discussion: dispensation-Discussion.html
-  Transformation PN13: transformationPN13-FHIR.html
+  Transformation PN13-FHIR:
+      Introduction: transformationPN13-FHIR-Intro.html
+      Transformation PN13 vers FHIR: transformation-PN13-vers-FHIR.html
+      Transformation FHIR vers PN13: transformation-FHIR-vers-PN13.html
+
   Ressources de conformité: artifacts.html
   Autres ressources:
       Historique des travaux: suivitravaux.html
