--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -11,7 +11,8 @@ fhirVersion: 4.0.1
 copyrightYear: 2020+
 releaseLabel: ci-build
 
-
+# parameters:
+#   path-data: input/images-data
 
 dependencies:
   hl7.fhir.fr.core: 2.1.0
