Finalisation pour réunion du 22 janvier

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -61,6 +61,16 @@ pages:
       title: Transformation de PN13 vers FHIR
     transformation-FHIR-vers-PN13.md:
       title: Transformation de FHIR vers PN13
+    PN13-exemples-intro.md:
+      title: Exemples PN13 - Introduction
+    PN13-prescription-DC.md:
+      title: Prescription PN13 médicament simple en DC
+    PN13-prescription-specialite.md:
+      title: Prescription PN13 médicament simple en spécialité
+    PN13-prescription-compound.md:
+      title: Prescription PN13 médicament composite
+    PN13-prescription-MV.md:
+      title: Prescritpion PN13 médicament virtuel
     downloads.md:
       title: Téléchargements et usages
     suivitravaux.md:
@@ -94,6 +104,12 @@ menu:
       Introduction: transformationPN13-FHIR-Intro.html
       Transformation PN13 vers FHIR: transformation-PN13-vers-FHIR.html
       Transformation FHIR vers PN13: transformation-FHIR-vers-PN13.html
+  Fichiers PN13 exemples:
+      Inroduction: PN13-exemples-Intro.html
+      Prescription PN13 médicament simple en DC: PN13-prescription-DC.html
+      Prescription PN13 médicament simple en spécialité: PN13-prescription-specialite.html
+      Prescription PN13 médicament composite: PN13-prescription-compound.html
+      Prescritpion PN13 médicament virtuel: PN13-prescription-MV.html
 
   Ressources de conformité: artifacts.html
   Autres ressources:
