--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -54,7 +54,7 @@ pages:
     dispensation-DispensationNominativeDelivranceReglobalisee.md:
       title: La dispensation - La dispensation nominative à délivrance reglobalisée
     dispensation-Discussion.md:
-      title: La disensation - Discussion
+      title: La dispensation - Discussion
     transformationPN13-FHIR-Intro.md:
       title: Transformation de PN13 en FHIR
     transformation-PN13-vers-FHIR.md:
@@ -70,7 +70,7 @@ pages:
     PN13-prescription-compound.md:
       title: Prescription PN13 médicament composite
     PN13-prescription-MV.md:
-      title: Prescritpion PN13 médicament virtuel
+      title: Prescription PN13 médicament virtuel
     downloads.md:
       title: Téléchargements et usages
     suivitravaux.md:
