--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -87,7 +87,7 @@ menu:
       Exemples: prescription-Exemples.html
   Dispensation:
       Introduction: dispensation-Intro.html
-      Ressource *MedicationDispense*: dispensation-RessourceMedicationDispense.html
+      Ressource MedicationDispense: dispensation-RessourceMedicationDispense.html
       La délivrance la plus simple: dispensation-DelivrancePlusSimple.html
       La dispensation nominative à délivrance reglobalisée: dispensation-DispensationNominativeDelivranceReglobalisee.html
       Discussion: dispensation-Discussion.html
