update canonical url

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -1,5 +1,5 @@
 id: hl7.fhir.fr.medication
-canonical: https://hl7.fr/fhir/fr/medication
+canonical: https://hl7.fr/ig/fhir/medication
 name: MED
 title: Guide d'implémentation du médicament
 publisher:
